fix alignment in final ranking

--- a/src/rankItem.css
+++ b/src/rankItem.css
@@ -16,4 +16,5 @@
     margin-left: 20px;
     font-family: 'Rammetto One', cursive;
     font-size: 2.5rem;
+    width: 20px;
 }
